# turbalance-simulation-task

./: .gitignore  README.md  pyproject.toml
notes/: dragonfly-high-bw-config-and-wiring.md  dragonfly-router-local-global-counts.md  dragonfly-standard-config-and-wiring.md  slide6-spine-minimization-examples.md  spine-minimization-examples.md
output/: dragonfly_16.json  dragonfly_32.json  dragonfly_4.json  topo_16.json  topo_32.json  topo_4.json
output_clos/: topo_64.json  topo_8.json
output_dragonfly/: dragonfly_128.json  dragonfly_64.json  dragonfly_8.json
output_dragonfly_high_bw/: dragonfly_128.json  dragonfly_16.json  dragonfly_32.json  dragonfly_4.json  dragonfly_64.json  dragonfly_8.json
src/clos_generator/: __init__.py  cli.py  sweep.py  topology.py  visualize.py
src/dragonfly_generator/: __init__.py  cli.py  sweep.py  topology.py  visualize.py
src/dragonfly_high_bw_generator/: __init__.py  cli.py  sweep.py  topology.py
